Fix email from being cut off in sidebar

--- a/web/sites/all/themes/findit_cambridge/css/modules.css
+++ b/web/sites/all/themes/findit_cambridge/css/modules.css
@@ -285,6 +285,7 @@
   background-position: left top;
   background-repeat: no-repeat;
   background-size: 2em;
+  word-break: break-all;
 }
 
 .findit-contact .contact-mail a {
